--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "main": "app.js",
   "scripts": {
     "build": "babel app.js --out-dir build",
-    "start": "nodemon --exec babel-node app.js --ignore client",
+    "start": "node --exec babel-node app.js --ignore client",
+    "start:dev":"nodemon --exec babel-node app.js --ignore client",
     "test": "echo \"Error: no test specified\" && exit 1",
     "client-install": "npm install --prefix client",
     "server": "nodemon app.js --ignore client",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run start\" \"npm run client\""
+    "dev": "concurrently \"npm run start\" \"npm run client\"",
+    "heroku-postbuild":
+      "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "",
   "license": "ISC",
